--- a/README
+++ b/README
@@ -10,6 +10,13 @@ This repo contains files and code for the system modules for Project Harmony.
 
 The [javacode](./javacode) folder contains the Java files used for the main system modules.
 
+### '/linuxapps'
+
+The [linux apps](./linuxapps) directory conatins C++ code for linux apps that help Project Harmony run.
+
 ## Build
 
-There should be build scripts availiable for use on building the app.
+There should be build scripts availiable for use on building the app.  
+
+
+>Project Harmony ©2021 Creative Development.
